[package]
name = "fltrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex  = { version = "1.5", optional = true }

[features]
# default = [ "regex" ]
regex = [ "dep:regex" ]

[dev-dependencies]
test-case = "2.0"
criterion = "0.3"

[[bench]]
name = "bench_rt"
harness = false
