[package]
name = "fltrs"
version = "0.1.0"
edition = "2021"
authors = ["Mario Linke"]
description = "Filter for querying lists."
keywords = ["filter", "query", "gui", "cli"]
license = "Apache-2.0"
documentation = "https://docs.rs/fltrs/"
repository = "https://github.com/lima1909/fltrs"


[dependencies]
regex  = { version = "1.5", optional = true }

[features]
# default = [ "regex" ]
regex = [ "dep:regex" ]

[dev-dependencies]
test-case = "2.0"
criterion = "0.3"

[[bench]]
name = "bench_rt"
harness = false
